--- a/src/components/Shop/Controls/Controls.css
+++ b/src/components/Shop/Controls/Controls.css
@@ -3,7 +3,8 @@ div.shop > div.shop-controls{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px 0px;
+    padding: 0;
+    padding-top: 10px;
     width: 100%;
 }
 
