--- a/src/container/Shop/Shop.css
+++ b/src/container/Shop/Shop.css
@@ -4,13 +4,13 @@ div.shop{
     /*  TO REMOVE!!!!!!!!*/
     min-height: calc(100vh - 58px);
     background: black;
-
 }
 
 div.shop-gallery{
     position: relative;
-    margin-top: 50px;
-    padding: 0 15px;
+    /* margin-top: 50px; */
+    padding: 50px 15px 0 15px;
     width: 100%;
     min-height: 100vh;
+    z-index: 3;
 }
